Fix responsive issues with search form Add box-shadow to containers Change background color Give search and data containers same width and align correctly

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -19,5 +19,5 @@
 
 html {
   height: 110%;
-  background-color: red;
+  background-color: #FEFADC;
 }
