--- a/src/styles/modules/_content.scss
+++ b/src/styles/modules/_content.scss
@@ -1,6 +1,5 @@
 .content {
   align-self: center;
-  background-color: white;
   height: 100%;
   min-height: 400px;
   width: 70%;
@@ -14,6 +13,13 @@ ul {
   list-style-type: none;
 }
 
+
+
+@media only screen and (max-width: 600px) {
+  .content {
+    width: 100%;
+  }
+}
 
 
 
